--- a/modulos_em_python/string_modulo_templates_email/template.html
+++ b/modulos_em_python/string_modulo_templates_email/template.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
 <head>
+    <meta charset="utf-8"/>
 </head>
 <body>
-<p> Olá <strong>$nome</strong>, hoje é $data.</p>
+    <p>  Olá <strong>$nome</strong>, tudo bem ?</p>
 </body>
 </html>
